tooling/nargo_cli/tests/snapshots/execution_success/simple_array_param/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(xs: [Field; 2]) -> pub Field {
    xs[1]
}
